--- a/src/app/game/cell/cell.component.html
+++ b/src/app/game/cell/cell.component.html
@@ -2,6 +2,7 @@
   type="button"
   [class.active]="isActive"
   [class.accent]="(cell.x + cell.y) % 2 === 0"
+  [class.pulse-sm]="!isDisabled"
   [disabled]="isDisabled"
   (click)="action.emit()"
 >
@@ -10,18 +11,19 @@
       *ngIf="cell.occupant!.isMain === true"
       title="Main Pawn"
     >
-      <icon type="ring"></icon>
+      <icon
+        type="ring"
+        [fill]="cell.occupant!.side === 'a' ? '777CCC' : 'CCC777'"
+      ></icon>
       <icon
         type="ogre"
-        stroke="FFFFFF"
-        [fill]="cell.occupant!.side === 'a' ? '111111' : 'CCCCCC'"
+        [fill]="cell.occupant!.side === 'a' ? '777CCC' : 'CCC777'"
       ></icon>
     </icon-stack>
     <icon
       *ngIf="cell.occupant!.isMain === false"
       type="ring"
-      stroke="FFFFFF"
-      [fill]="cell.occupant!.side === 'a' ? '111111' : 'CCCCCC'"
+      [fill]="cell.occupant!.side === 'a' ? '777CCC' : 'CCC777'"
       title="Pawn"
     ></icon>
   </div>
@@ -29,7 +31,10 @@
     *ngIf="cell.victory"
     class="watermark"
   >
-    {{cell.victory === 'a' ? '♔' : '♚' }}
+    <icon
+      type="crown"
+      [fill]="cell.victory === 'a' ? '777CCC' : 'CCC777'"
+    ></icon>
   </div>
   <div
     *ngIf="isTarget === true"
