--- a/src/app/game/cell/cell.component.scss
+++ b/src/app/game/cell/cell.component.scss
@@ -4,21 +4,22 @@ button {
   position: relative;
   background-color: white;
   border-width: medium;
+  border-radius: 0.5em;
   padding: 0;
   font-size: x-large;
   cursor: pointer;
 
   &:disabled {
     cursor: default;
-    border: none;
+    border-color: white;
   }
 
   &.accent {
-    background-color: #f6f6f6;
+    background-color: #eee;
   }
 
   &.active {
-    box-shadow: inset 0 0 1em black;
+    box-shadow: 0 0 1em white;
   }
 
   > .watermark {
@@ -28,7 +29,7 @@ button {
     right: 0;
     left: 0;
     font-size: 5rem;
-    opacity: 0.08;
+    opacity: 0.1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,8 +39,9 @@ button {
   }
 
   > .target-bg {
-    opacity: 0.2;
-    background: #247;
+    opacity: 0.3;
+    background: #000000;
+    background: repeating-linear-gradient(45deg, transparent, transparent 10px, black 10px, black 17px);
     position: absolute;
     top: 0;
     right: 0;
